@@ -1,5 +1,5 @@
 /* Ruby bindings for the Clutter 'interactive canvas' library.
- * Copyright (C) 2007  Neil Roberts
+ * Copyright (C) 2007-2008  Neil Roberts
  * 
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -25,25 +25,14 @@
 
 #include "rbclutter.h"
 
-static VALUE rbclt_event_class;
-
 /* EVENT_FUNCTIONS */
-
-static VALUE
-rbclt_event_initialize (VALUE self)
-{
-  ClutterEvent event;
-  memset (&event, '\0', sizeof (event));
-  event.type = CLUTTER_NOTHING;
-  G_INITIALIZE (self, &event);
-  return Qnil;
-}
 
 static VALUE
 rbclt_event_get_event_type (VALUE self)
 {
-  return GENUM2RVAL (((ClutterEvent *) RVAL2BOXED (self, CLUTTER_TYPE_EVENT))->type,
-                     CLUTTER_TYPE_EVENT_TYPE);
+  ClutterEvent *event = (ClutterEvent *) RVAL2BOXED (self, CLUTTER_TYPE_EVENT);
+
+  return GENUM2RVAL (event->type, CLUTTER_TYPE_EVENT_TYPE);
 }
 
 static VALUE
@@ -96,21 +85,24 @@ rbclt_event_put (VALUE self)
 static VALUE
 rbclt_key_event_symbol (VALUE self)
 {
-  ClutterKeyEvent *key_event = (ClutterKeyEvent *) RVAL2BOXED (self, CLUTTER_TYPE_EVENT);
+  ClutterKeyEvent *key_event
+    = (ClutterKeyEvent *) RVAL2BOXED (self, CLUTTER_TYPE_EVENT);
   return INT2NUM (clutter_key_event_symbol (key_event));
 }
 
 static VALUE
 rbclt_key_event_code (VALUE self)
 {
-  ClutterKeyEvent *key_event = (ClutterKeyEvent *) RVAL2BOXED (self, CLUTTER_TYPE_EVENT);
+  ClutterKeyEvent *key_event
+    = (ClutterKeyEvent *) RVAL2BOXED (self, CLUTTER_TYPE_EVENT);
   return UINT2NUM (clutter_key_event_code (key_event));
 }
 
 static VALUE
 rbclt_key_event_unicode (VALUE self)
 {
-  ClutterKeyEvent *key_event = (ClutterKeyEvent *) RVAL2BOXED (self, CLUTTER_TYPE_EVENT);
+  ClutterKeyEvent *key_event
+    = (ClutterKeyEvent *) RVAL2BOXED (self, CLUTTER_TYPE_EVENT);
   return UINT2NUM (clutter_key_event_unicode (key_event));
 }
 
@@ -125,26 +117,33 @@ rbclt_event_init ()
 {
   VALUE klass;
 
-  rbclt_event_class = G_DEF_CLASS (CLUTTER_TYPE_EVENT, "Event", rbclt_c_clutter);
-  rb_define_method (rbclt_event_class, "initialize", rbclt_event_initialize, 0);
-  rb_define_method (rbclt_event_class, "event_type", rbclt_event_get_event_type, 0);
+  rbclt_event_class = G_DEF_CLASS (CLUTTER_TYPE_EVENT, "Event",
+				   rbclt_c_clutter);
+
+  /* CLASS_DEFS */
+
+  /* ENUMS */
+
+  rb_define_method (rbclt_event_class, "event_type",
+		    rbclt_event_get_event_type, 0);
   rb_define_method (rbclt_event_class, "put", rbclt_event_put, 0);
+
   rbgobj_register_g2r_func (CLUTTER_TYPE_EVENT, rbclt_event_g2r);
 
-  rb_define_singleton_method (rbclt_event_class, "pending?", rbclt_event_pending, 0);
+  rb_define_singleton_method (rbclt_event_class, "pending?",
+			      rbclt_event_pending, 0);
   rb_define_singleton_method (rbclt_event_class, "get", rbclt_event_get, 0);
   rb_define_singleton_method (rbclt_event_class, "peek", rbclt_event_peek, 0);
 
   G_DEF_CLASS (CLUTTER_TYPE_EVENT_TYPE, "Type", rbclt_event_class);
   G_DEF_CONSTANTS (rbclt_event_class, CLUTTER_TYPE_EVENT_TYPE, "CLUTTER_");
-
-  /* ENUMS */
-
-  /* CLASS_DEFS */
+  G_DEF_CLASS (CLUTTER_TYPE_EVENT_FLAGS, "Flag", rbclt_event_class);
+  G_DEF_CONSTANTS (rbclt_event_class, CLUTTER_TYPE_EVENT_FLAGS, "CLUTTER_");
 
   rb_define_method (rbclt_key_event_class, "symbol", rbclt_key_event_symbol, 0);
   rb_define_method (rbclt_key_event_class, "code", rbclt_key_event_code, 0);
-  rb_define_method (rbclt_key_event_class, "unicode", rbclt_key_event_unicode, 0);
+  rb_define_method (rbclt_key_event_class, "unicode",
+		    rbclt_key_event_unicode, 0);
 
   rb_define_singleton_method (rbclt_c_clutter, "keysym_to_unicode",
 			      rbclt_event_keysym_to_unicode, 1);
